--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
     </div>
 
     <div class="birthday-text">
-      pypy bday nadaulll 💖🌷
+      pypy bday nadaulll 💖🌷 semoga apa yang dia impikan akan segera terwujud dan semoga dia bahagia, panjang umur, dan panjang segalanya. gw gk bisa bikin kata kata manis pokonya gw selalu mendukung dan meng aamiin kan apa yang lu mau. heheh Syahrul 
     </div>
     
 
